@@ -400,21 +400,18 @@ IF(PTHREAD_AVAILABLE)
     ENDIF(BROKEN_PTHREAD_FLAG)
   ENDIF(NOT NO_PTHREAD_FLAG)
 
-  ADD_DEFINE(USE_POSIXMUTEX)
-  ADD_DEFINE(USE_POSIXTHREADS)
+  ADD_DEFINE(USE_POSIXTHREADING)
 ELSE(PTHREAD_AVAILABLE)
 
 IF(WINTHREAD_AVAILABLE)
-  ADD_DEFINE(USE_WINDOWSMUTEX)
-  ADD_DEFINE(USE_WINDOWSTHREADS)
+  ADD_DEFINE(USE_WINDOWSTHREADING)
 ELSE(WINTHREAD_AVAILABLE)
 
 IF(MOSTHREAD_AVAILABLE)
-  ADD_DEFINE(USE_MORPHOSMUTEX)
-  ADD_DEFINE(USE_MORPHOSTHREADS)
+  ADD_DEFINE(USE_MORPHOSTHREADING)
 ELSE(MOSTHREAD_AVAILABLE)
 
-  ADD_DEFINE(NO_THREADS)
+  ADD_DEFINE(NO_THREADING)
 ENDIF(MOSTHREAD_AVAILABLE)
 ENDIF(WINTHREAD_AVAILABLE)
 ENDIF(PTHREAD_AVAILABLE)
